--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,4 +3,5 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt --no-cache-dir
 COPY . .
-CMD ["gunicorn", "dinasdesserts.wsgi.application", "--bind", "0:8000" ]
+#CMD ["python", "manage.py", "runserver", "0:8000"]
+CMD ["gunicorn", "dinasdesserts.wsgi:application", "--bind", "0:8000" ]
