--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,36 +1,37 @@
 version: '3.11'
 services:
-
-#  db:
-#    image: postgres:13.0-alpine
-#    volumes:
-#      - db_value:/var/lib/postgresql/data/
-#    env_file:
-#      - ../infra/.env
+  #  db:
+  #    image: postgres:13.0-alpine
+  #    volumes:
+  #      - db_value:/var/lib/postgresql/data/
+  #    env_file:
+  #      - ../infra/.env
 
   backend:
+    #    image: wegnagun/dessets-backend:v0
     image: wegnagun/dessets-backend:v0
     restart: always
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
-#    depends_on:
-#      - db
+    #    depends_on:
+    #      - db
     env_file:
-#      - ../infra/.env
-       - ../backend/.env
+      #      - ../infra/.env
+      - ../backend/.env
 
-#  frontend:
-#    image: wegnagun/foodgram-front:latest
-#    volumes:
-#      - ../frontend/:/app/result_build/
-#    depends_on:
-#      - backend
+  frontend:
+    #    image: wegnagun/foodgram-front:latest
+    image: dinasfrontend:latest
+    volumes:
+      - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
 
   nginx:
     image: nginx:1.19.3
     ports:
-      - "80:80"
+      - '80:80'
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
@@ -39,7 +40,7 @@ services:
       - media_value:/var/html/media
     depends_on:
       - backend
-#      - frontend
+      - frontend
 
 volumes:
   static_value:
