--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.11-slim
 WORKDIR /app
 COPY requirements.txt .
+RUN python -m pip install --upgrade pip setuptools
 RUN pip install -r requirements.txt --no-cache-dir
 COPY . .
 #CMD ["python", "manage.py", "runserver", "0:8000"]
