--- a/.github/workflows/dinasdesserts_workflow.yml
+++ b/.github/workflows/dinasdesserts_workflow.yml
@@ -67,7 +67,7 @@ jobs:
 
   send_message:
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: build_and_push_frontend_to_docker_hub # потом поправить!!!!!! на деплой
     steps:
       - name: send message
         uses: appleboy/telegram-action@master
