--- a/.github/workflows/dinasdesserts_workflow.yml
+++ b/.github/workflows/dinasdesserts_workflow.yml
@@ -23,7 +23,7 @@ jobs:
   build_and_push_backend_to_docker_hub:
     name: Push Docker backend image to Docker Hub
     runs-on: ubuntu-latest
-    #  needs: tests
+    needs: tests
     if: github.ref == 'refs/heads/master'
     steps:
       - name: Check out the repo
