--- a/.github/workflows/dinasdesserts_workflow.yml
+++ b/.github/workflows/dinasdesserts_workflow.yml
@@ -24,7 +24,7 @@ jobs:
     name: Push Docker backend image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
-    if: github.ref == 'refs/heads/main'
+    if: ${{ github.ref }} == 'main'
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -46,7 +46,7 @@ jobs:
     name: Push Docker frontend image to Docker Hub
     runs-on: ubuntu-latest
     needs: build_and_push_backend_to_docker_hub
-    if: github.ref == 'refs/heads/main'
+    if: ${{ github.ref }} == 'main'
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -65,9 +65,50 @@ jobs:
           context: ./backend/
           tags: ${{ secrets.DOCKER_USERNAME }}/dinasdesserts-front:latest
 
+  deploy:
+    if: ${{ github.ref }} == 'main'
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+      - name: pull docker image
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          script: |
+            sudo docker pull ${{ secrets.USER }}/dinasdesserts-back:latest
+            sudo docker pull ${{ secrets.USER }}/dinasdesserts-front:latest
+            cd dinasdesserts/infra/
+            sudo docker-compose stop
+            sudo docker-compose rm -f backend
+            sudo docker-compose rm -f frontend
+      - name: docker-compose up
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          script: |
+            cd dinasdesserts/infra/
+            touch .env
+            echo KEY="${{ secrets.KEY }}" >> .env
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            echo DEBUG=${{ secrets.DBG }} >> .env
+            echo HOSTS=${{ secrets.HOSTS }} >> .env
+            echo ORIGINS=${{ secrets.ORIGINS }} >> .env
+            sudo docker-compose up -d --build
+
   send_message:
     runs-on: ubuntu-latest
-    needs: build_and_push_frontend_to_docker_hub # потом поправить!!!!!! на деплой
+    needs: deploy
     steps:
       - name: send message
         uses: appleboy/telegram-action@master
