try card as link

--- a/.github/workflows/dinasdesserts_workflow.yml
+++ b/.github/workflows/dinasdesserts_workflow.yml
@@ -78,6 +78,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
+            sudo docker image prune -f
             sudo docker pull ${{ secrets.USER }}/dinasdesserts-back:latest
             sudo docker pull ${{ secrets.USER }}/dinasdesserts-front:latest
             cd dinasdesserts/infra/
